Fix form input text being cut off and flag select height changing when error

--- a/src/main/webapp/css/site.css
+++ b/src/main/webapp/css/site.css
@@ -69,7 +69,7 @@ h1 {
     margin: 0 auto;
 }
 .form-control {
-    padding: 10px;
+    padding: 0;
 }
 .form-primary .form-control:focus {
     z-index: 2;
@@ -118,7 +118,7 @@ label.form-control-feedback.glyphicon {
 }
 
 .has-feedback .form-control {
-    padding-right: 10px; /* this should be the same as form-control padding */
+    padding-right: 0; /* this should be the same as form-control padding */
 }
 .has-feedback .form-control-feedback {
     top: 8px;
@@ -190,6 +190,7 @@ body.userdetails div.form-group div.intl-tel-input {
 /* Make flag stay above :focus input */
 body.userdetails div.flag-dropdown {
     z-index: 4;
+    height: 50px; /* set the same as form-primary input height */
 }
 
 
